UF-7776: Fixes sonarr-issues