@@ -3,7 +3,6 @@ package se.sundsvall.businessinformation.integration.ecos;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
@@ -16,50 +15,44 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.mockito.Answers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.zalando.problem.ThrowableProblem;
 
+import se.sundsvall.businessinformation.TestUtil;
+
 import minutmiljo.ArrayOfSearchFacilityResultSvcDto;
 import minutmiljo.GetFacilityPartyRoles;
 import minutmiljo.GetFoodFacilities;
 import minutmiljo.GetParty;
-import minutmiljo.OrganizationSvcDto;
-import minutmiljo.PersonSvcDto;
 import minutmiljo.SearchFacility;
 import minutmiljo.SearchFacilityResponse;
 import minutmiljo.SearchFacilityResultSvcDto;
-import se.sundsvall.businessinformation.TestUtil;
 
 @ExtendWith(MockitoExtension.class)
 class EcosIntegrationTest {
 
 	@Mock
 	EcosClient client;
-	@Mock(answer = Answers.CALLS_REAL_METHODS)
-	EcosMapper mapper;
+
 	@InjectMocks
 	EcosIntegration integration;
 
 	@ParameterizedTest()
-	@ValueSource(strings = { "123456-7890", "12123456-7890" })
-	void getFacilities(String orgNr) {
+	@ValueSource(strings = {"123456-7890", "12123456-7890"})
+	void getFacilities(final String orgNr) {
 
 		when(client.searchFacility(any(SearchFacility.class))).thenReturn(buildSearchFacilityResult());
 
 		final var result = integration.getFacilities(orgNr);
 
-		assertThat(result).isNotNull();
-		assertThat(result.size()).isEqualTo(1);
-		// We ignore huvudsakliginriktning since ECOS cannot deliver huvudsakliginriktning/main
+		assertThat(result).isNotNull().hasSize(1);
+		// We ignore huvudsakligInriktning since ECOS cannot deliver huvudsakligInriktning/main
 		// orientation at this given time.
-		assertThat(result.get(0)).hasNoNullFieldsOrPropertiesExcept("huvudsakliginriktning");
+		assertThat(result.getFirst()).hasNoNullFieldsOrPropertiesExcept("huvudsakliginriktning");
 
 		verify(client, times(1)).searchFacility(any(SearchFacility.class));
-		verify(mapper, times(1)).toDto(any(SearchFacilityResponse.class));
-		verifyNoMoreInteractions(mapper);
 		verifyNoMoreInteractions(client);
 	}
 
@@ -90,7 +83,6 @@ class EcosIntegrationTest {
 				"the last four seperated with a hyphen");
 
 		verifyNoInteractions(client);
-		verifyNoInteractions(mapper);
 	}
 
 	@Test
@@ -104,17 +96,12 @@ class EcosIntegrationTest {
 
 		final var result = integration.getFacility("someAnlaggningsid");
 
-		assertThat(result).isNotNull();
-		assertThat(result).hasNoNullFieldsOrPropertiesExcept("mobilAnlaggning");
+		assertThat(result).isNotNull().hasNoNullFieldsOrPropertiesExcept("mobilAnlaggning");
 
-		verify(mapper, times(1)).fromPersonDto(any(PersonSvcDto.class));
-		verify(mapper, times(1)).fromOrganizationDto(any(OrganizationSvcDto.class));
-		verify(mapper, times(1)).toAnlaggning(any(SearchFacilityResultSvcDto.class), anyList());
 		verify(client, times(2)).getParty(any(GetParty.class));
 		verify(client, times(1)).getFacilityPartyRoles(any(GetFacilityPartyRoles.class));
 		verify(client, times(1)).getFoodFacilities(any(GetFoodFacilities.class));
 		verify(client, times(1)).searchFacility(any(SearchFacility.class));
-		verifyNoMoreInteractions(mapper);
 		verifyNoMoreInteractions(client);
 	}
 
@@ -129,17 +116,13 @@ class EcosIntegrationTest {
 
 		final var result = integration.getFacility("someAnlaggningsid");
 
-		assertThat(result).isNotNull();
-		assertThat(result).hasNoNullFieldsOrPropertiesExcept("mobilAnlaggning");
+		assertThat(result).isNotNull().hasNoNullFieldsOrPropertiesExcept("mobilAnlaggning");
 
-		verify(mapper, times(1)).fromPersonDto(any(PersonSvcDto.class));
-		verify(mapper, times(1)).fromOrganizationDto(any(OrganizationSvcDto.class));
-		verify(mapper, times(1)).toAnlaggning(any(SearchFacilityResultSvcDto.class), anyList());
 		verify(client, times(2)).getParty(any(GetParty.class));
 		verify(client, times(1)).getFacilityPartyRoles(any(GetFacilityPartyRoles.class));
 		verify(client, times(1)).getFoodFacilities(any(GetFoodFacilities.class));
 		verify(client, times(1)).searchFacility(any(SearchFacility.class));
-		verifyNoMoreInteractions(mapper);
+
 		verifyNoMoreInteractions(client);
 	}
 
@@ -148,10 +131,8 @@ class EcosIntegrationTest {
 		final var result = integration.getLivsmedelsverksamhet("someAnlaggningsid");
 
 		assertThat(result).isNotNull();
-
-		verify(mapper, times(1)).toLivsmedelsverksamhet();
 		verifyNoInteractions(client);
-		verifyNoMoreInteractions(mapper);
+
 	}
 
 	@Test
@@ -163,11 +144,9 @@ class EcosIntegrationTest {
 
 		final var result = integration.getFakturering("someAnlaggningsid");
 
-		assertThat(result).isNotNull();
-		assertThat(result).hasNoNullFieldsOrPropertiesExcept("fakturareferens");
+		assertThat(result).isNotNull().hasNoNullFieldsOrPropertiesExcept("fakturareferens");
 
-		verify(mapper, times(1)).toFaktura(anyList(), any(String.class));
-		verifyNoMoreInteractions(mapper);
 		verifyNoMoreInteractions(client);
 	}
+
 }
